# neovim-config

./: .gitignore  init.lua  lazy-lock.json  notes_databricks_plugin.md  pyproject.toml
lua/: keymaps.lua  lazy-bootstrap.lua
lua/databricks/: api.lua  buffer.lua  config.lua  init.lua  strings.lua
lua/plugins/: blink.lua  copilot.lua  databricks.lua  execute_code.py  formatter.lua  harpoon.lua  kanagawa.lua  lsp-new.lua  lsp.lua  lualine.lua  nightfox.lua  nvim-autopairs.lua  nvim-surround.lua  render-markdown.lua  rosepine.lua  telescope.lua  tree-sitter.lua  yazi.lua
